# ptmud-next

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
lib/etc/: players  time
lib/world/midgaard/: midgaard.are  midgard.are
src/: CMakeLists.txt  act.comm.c  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  alias.c  area.c  area.h  ban.c  boards.c  boards.h  bsd-snprintf.c  bsd-snprintf.h  castle.c  class.c  comm.c  comm.h  conf.h.in  config.c  constants.c  constants.h  db.c  db.h  fight.c  graph.c  handler.c  handler.h  house.c  house.h  interpreter.c  interpreter.h  limits.c  magic.c  mail.c  mail.h  mobact.c  (+19 more)
src/util/: CMakeLists.txt
